Production/LETSENCRYPT/ArgoCDExternalName.yaml
kind: Service
apiVersion: v1
metadata:
  name: argocd-server
  namespace: ff-production
spec:
  type: ExternalName
  externalName: argocd-server.argocd.svc.cluster.local
  ports:
  - port: 80
  - port: 443
